--- a/values.yaml
+++ b/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 3
 image:
   repository: ugurbzkrt/nginx-argo
   tag: "latest"
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 service:
   type: LoadBalancer
